--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Hello World</h1>
 <p>This is awesome</p>
+
+<!-- these are the same -->
+<a href="/demo/hello">Hello page 1</a><br />
+<%= link_to('Hello Page with parameters', {:action => 'hello', :page => 5, :id => 20}) %> <br />
